<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_current_location">Current location</string>
    <string name="label_today">Today</string>
    <string name="label_now">Now</string>
    <string name="label_sunrise">Sunrise:</string>
    <string name="label_sunset">Sunset:</string>
    <string name="label_wind">Wind:</string>
    <string name="label_humidity">Humidity:</string>
    <string name="label_precipitation">Pricipitation:</string>
    <string name="label_pressure">Pressure:</string>
    <string name="label_visibility">Visibility:</string>
    <string name="label_ozone">UV Index:</string>
    <string name="label_temperature">Teperature</string>
    <string name="label_wind_speed">Wind speed</string>
    <string name="label_celsius_unit">°C</string>
    <string name="label_fahrenheit_unit">°F</string>
    <string name="label_kilometres_per_hour">km/h</string>
    <string name="label_metres_per_second">m/s</string>
    <string name="label_miles_per_hour">mph</string>

    <string name="unit_label_percentage">%</string>
    <string name="action_search">Search</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_message_google_availability">"Google Play Service is not available: "</string>
    <string name="error_place_autocomplete_result">"Error: status = "</string>
    <string name="title_settings">Settings</string>
    <string name="title_no_city_found">No City found</string>
    <string name="title_cellular_data_is_turned_off">Cellular Data is Turned Off</string>
    <string name="button_label_ok">Ok</string>
    <string name="button_label_settings">Settings</string>
    <string name="permission_location_rationale">Location permission is needed to show weather current location</string>
    <string name="permission_not_granted">Permission were not granted.</string>
    <string name="error_message_no_location_data_provided">No location data provided</string>
    <string name="error_message_can_not_add_location">Can not add new location</string>
    <string name ="error_message_no_address_found">Sorry, no address found</string>
    <string name="message_turn_on_cellular_data">Turn on cellular data or use Wi-Fi to access data.</string>
    <string name="error_contacting_api">"Error contacting API: "</string>
</resources>
